# streamlit_shizukani

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
modules/: __init__.py  fight.py
src/streamlit_shizukani/: __init__.py
src/streamlit_shizukani/modules/: __init__.py  address.py  error.py  fight.py  googlesearch.py  main.py  meaning.py  time.py
