[project]
name = "streamlit-shizukani"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "gensim>=4.3.2",
    "streamlit>=1.36.0",
    "playsound==1.2.2",
    "janome>=0.5.0",
    "requests>=2.32.3",
    "beautifulsoup4>=4.12.3",
    "keyboard>=0.13.5",
    "googletrans>=3.0.0",
    "scipy==1.10.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/streamlit-shizukani"]
